# time-tracker

./: LICENSE  README.md  TimeTracker-test.flatpak  com.lynnmichaelmartin.TimeTracker.flatpak  com.lynnmichaelmartin.TimeTracker.json  main.blp  main.js  main.ui  meson.build  snapcraft.yaml  time-tracker-v1.0.2.flatpak
data/: com.lynnmichaelmartin.TimeTracker.desktop  com.lynnmichaelmartin.TimeTracker.desktop.in  com.lynnmichaelmartin.TimeTracker.gschema.xml  com.lynnmichaelmartin.TimeTracker.metainfo.xml.in  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: com.lynnmichaelmartin.TimeTracker.data.gresource.xml  com.lynnmichaelmartin.TimeTracker.src.gresource.xml  main.js  meson.build  preferences.js  preferences.ui  style.css  time-tracker.data.gresource.xml  window.js  window.ui
src/gtk/: help-overlay.ui
